# hitster

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.default.toml  config.example.toml  flake.nix
.github/workflows/: docker.yml  pr-ci.yml
.sqlx/: query-1578960bf23b7f4cc06c5d278f39dca69886e8c4666bc76895ad5a3cee9b7467.json  query-2ee8154c10ba21eb6e9b648300d310a1212dddc51b2b7158a91d1c1487e366e5.json  query-840d8a1bcece80f3b1f7696a83353226576b6219acf056abf2e5241c88f381f2.json  query-841da4795a2d5dc76598625e2e5897925598d647c659f1b0df76fa2d05a58a16.json
docs/: API.md
examples/: test_html_output.rs
migrations/: 20240904180000_initial.sql  20250905160312_update_column_types.sql  20250911215804_initial.sql  20250913122546_add_album_cover_url_to_tracks.sql
src/: config.rs  html_generator.rs  html_templates.rs  lib.rs  main.rs  pdf_generator.rs  qr_generator.rs  spotify_service.rs  web_server.rs
src/application/: hitster_service.rs  job_service.rs  jobs.rs  jobs_service.rs  mod.rs  models.rs  pdf_generator.rs  playlist_service.rs
src/application/interfaces/: job_repository.rs  mod.rs  playlist_repository.rs  spotify_client.rs
src/application/models/: job.rs  job_model.rs  job_type.rs  mod.rs  pdf.rs  playlist.rs
src/application/pdf_generator/: html.rs  mod.rs
src/application/worker/: mod.rs  tasks.rs
src/domain/: errors.rs  job.rs  mod.rs  pdf.rs  playlist.rs  services.rs  spotify_id.rs
src/infrastructure/: database.rs  job_processor.rs  mod.rs  spotify_service.rs
src/infrastructure/database/: database_tests.rs
src/infrastructure/entities/: mod.rs
src/infrastructure/jobs/: mod.rs
src/infrastructure/playlist/: mod.rs
src/infrastructure/spotify/: mapper.rs  mod.rs  service.rs
src/templates/components/: card.rs
src/web/: error.rs  extensions.rs  mod.rs  server.rs
src/web/controllers/: jobs.rs  jobs_controller.rs  mod.rs  playlist.rs  playlist_controller.rs  view.rs  view_controller.rs
src/web/templates/: cards.rs  error.rs  index.rs  mod.rs  playlist.rs
src/web/templates/components/: card.rs  mod.rs
templates/: base.html  base.html.tera  card_macros.html  cards.html  cards.html.tera  error.html  index.html  macros.html  pdf.html  playlist.html
templates/components/: card.html
tests/: integration_test.rs  real_api_integration_test.rs  web_controllers_integration_test.rs
