[package]
name = "hitster"
version = "0.1.0"
edition = "2024"

[lib]
name = "hitster"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-stream = { version = "0.1" }

# Web framework
axum = { version = "0.8", features = ["macros"] }

# Spotify API
rspotify = { version = "0.15", features = ["client-reqwest", "reqwest-native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
displaydoc = "0.2"

# Configuration
config = "0.15"

# QR code generation
qrcode = "0.14"

# PDF generation
oxidize-pdf = {version = "1.2", features = ["compression"]}
image = {version = "0.25", features = ["png"]}
rayon = "1.11"

# Templating
askama = "0.14"

# Utilities
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Add boundaries for async traits
trait-variant = "0.1.2"
winnow = "0.7.13"

[package.metadata.askama]
templates = "src/web/templates"
